# rpg

./: .gitignore  APOTHEOSIS_GUIDE.md  app.html  index.html  index_improved.html  nineware_improved.css
claude-pet/: package.json
claude-pet/src/: index.html
claude-pet/src-tauri/: Cargo.toml  tauri.conf.json
claude-pet/src-tauri/src/: lib.rs  main.rs
js/: best_tab.js  countdown.js  review_carousel.js
rpg-app/: app.html
skills/image-generation/: SKILL.md
skills/image-generation/examples/: 01-quick-start.md
skills/image-generation/presets/photo-filters/: artistic.yaml  cinematic.yaml  color-grade.yaml  commercial.yaml  era.yaml  lighting.yaml  mood.yaml  portrait.yaml  purpose.yaml  weather.yaml
skills/image-generation/references/: api-endpoints.md  instagram-photography.md  models.md  prompt-engineering.md  visual-physics.md
skills/image-generation/scripts/: analyze.py  apply_filter.py  compose.py  edit.py  generate.py  preview.py  remove_bg.py  style_transfer.py  to_3d.py  variations.py
skills/image-generation/scripts/lib/: __init__.py  pollinations.py  prompt_builder.py
