[package]
name = "claude-pet"
version = "1.0.0"
edition = "2021"
description = "Claude Desktop Pet"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "claude_pet_lib"
crate-type = ["lib", "cdylib", "staticlib"]
